:art:puse un poco de estilo al js

--- a/index.html
+++ b/index.html
@@ -3,17 +3,58 @@
  <head>
  <link rel="stylesheet" href="main.css">
 
+ <title>Botón</title>
+ <style>
+     .boton-estilizado {
+         background-color: #007bff;
+         color: white;
+         border: none; 
+         border-radius: 5px; 
+         padding: 10px 20px;
+         font-size: 16px;
+         cursor: pointer;
+         transition: background-color 0.3s; 
+     }
+     .boton-estilizado:hover {
+         background-color: #0056b3;
+         }
+     }
+ </style>
+
+<button class="boton-estilizado" onclick="window.location.href='https://chatgpt.com/?ref=dotcom'">
+ Buscar
+</button>
+
+    <title>Botón de entrada</title>
+    <style>
+        .boton-estilizado {
+            background-color: #007bff;
+            color: white;
+            border: none; 
+            border-radius: 5px; 
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s; 
+        }
+        .boton-estilizado:hover {
+            background-color: #0056b3;
+            }
+        }
+    </style>
+
+<button class="boton-estilizado" onclick="window.location.href='login.html'">
+    Iniciar sesion
+</button>
 
 
- </head>
- <body>
   <h1>PUBLICIDAD Y VENTAS CON EM</h1>
  <p>TU EXITO ES NUESTRA MISION ! DESCUBRE LO QUE PODEMOS HACER POR TI¡</p>
  <p>TE APOYAMOS EN TUS:</p>
- <img class="Objetivos" src="https://image.freepik.com/vetores-gratis/modelo-de-colecao-de-post-instagram-geometrica-com-fotos_23-2148267012.jpg">
+ <img class="Objetivos" src="https://th.bing.com/th/id/OIP.tEJUvhl_nYc6WNnoeihWRgHaEt?rs=1&pid=ImgDetMain">
  <h2 class="objetivos">OBJETIVOS</h2>
  <p class="objetivos">"La app EM publicidad y vetas" te ayudamos a crecer en tu negocio si quieres emprender te ayudamos a publicitarte y tener mayor popularidad en el área de marketing y ventas y mucho más, además contamos con Estrategias personalizadas para llevar tu negocio al siguiente nivel y Atrae más clientes con nuestras soluciones creativas y efectivas que te ayudaran a crecer como nunca lo imaginaste si quieres lograr esto y mucho más la app EM es tu solución.</p>
-   <a href="https://www.marketingandweb.es/marketing/anuncios-publicitarios/#:~:text=Porque%20no%20han%20surgido%20de%20la%20nada,%20sino%20que%20se"> visitanos en nuestra pagina web</a>
+   <a href="https://fotografiaecommerce.com/"> visitanos en nuestra pagina web</a>
    <br>
  <br>
    
@@ -21,12 +62,12 @@
  <hr>
  <br>
 <br>
- <img class="publicidad" src="https://th.bing.com/th/id/OIP.M4dhhDqoQ1GcIdNn58C0ygHaEk?rs=1&pid=ImgDetMain">
+ <img class="publicidad" src="https://th.bing.com/th/id/OIP.DTvMV9-XureBWfVhGH5MtwHaEm?rs=1&pid=ImgDetMain">
  <h2 class="publicidad">PUBLICIDAD</h2>
  <p class="publicidad">Es un sitio de publicidad divertida e intrépida que produce mayor popularidad y ventas de calidad excepcional a un precio increíble. ¡Somos expertos en acercarte a entusiastas interesados en comprar productos y ayudarte a crecer!
  
     si eres principiante "Sé parte de nuestra comunidad, publicita y crece con nosotros" estamos comprometidos a "Impulsa tus ventas el espacio perfecto para mostrar tu negocio" ademas "Haz que tu mensaje llegue lejos, ¡comienza a publicitarte ahora!"</p>
-   <a href="https://www.shein.com/?lang=enes#:~:text=Descubre%20la%20ropa%20de%20mujer%20m%C3%A1s%20actual%20y%20al%20mejor&msockid=03b7d091efaf617f1b31c592ee486047"> visitanos en nuestra pagina web</a>
+   <a href="https://miniso.sv/"> visitanos en nuestra pagina web</a>
    <br>
   
   <br>
@@ -35,11 +76,11 @@
   <br>
 <br>
    <img class="marketing"
-  src="https://www.damos.co/fotosnoticias/mac_maximizando_el_impacto_de_tu_estrategia_de_marketing_con_el_marketing_de_contenidos__1675315177.jpg">
+  src="https://th.bing.com/th/id/OIP.-gqPigjuQWUeao-0eCPl9gHaGe?&rs=1&pid=ImgDetMain">
  <h2 class="marketing">MARKETING</h2>
  <p class="marketing">El  marketing no tiene límites ni barreras.y en EM, creemos que cada persona merece sentirse segura y apoyada, sin importar su clase de negocio,lo que venda o como venda Cada día es una nueva oportunidad para brillar y mostrar al mundo tu verdadero yo. Recuerda, la confianza en ti mismo es el mejor camino que puedes llevar. ¡Atrévete a trabajar con nosotros y a conquistar el mundo con tus productos. nos ayudas a crecer y nosotros te ayudamos "crecer juntos sera la mejor aventura en tu negocio atrevete a vivir esta aventura quedaras sorprendido con los resultados te esperamos."</p>
   <br>
-    <a href="https://www.marketingandweb.es/marketing/mejores-paginas-publicar-anuncios-gratis/#:~:text=Ya%20est%C3%A1s%20preparado%20para%20comenzar%20a%20vender%20tus%20productos%20por"> visitanos en nuestra pagina web</a>
+    <a href="https://www.shopify.com/mx/facebook-instagram?utm_medium=cpc&utm_source=yabing&jk=vender%20productos%20en%20instagram&utm_source=yabing&utm_medium=cpc&utm_campaign=Paid%20Search%20-%20Bing%20-%20Latin%20America%20-%20Facebook%20-%20Spanish&bingadgroupid=1229254252839348&bingadid=76828538834587&bingkeywordid=76828595635788&bingnetwork=o&BOID=none&msclkid=297bbb19547217659d77dc109170b132&utm_term=vender%20productos%20en%20instagram&utm_content=Facebook%20-%20Instagram%20Sell"> visitanos en nuestra pagina web</a>
 <br>
    <hr>
   <br>
@@ -53,10 +94,11 @@
    <br>
    <br>
    <ol>
-    <li> este sitio solo es para publicitarte y obtener mas ventas en tu negocio </li>
-    <li>contenido para todo publico ("en especial para las personas que desean productos que les llama la atención en nuestra app")</li>
-    <li>"Tu seguridad es nuestra prioridad: navegamos contigo en un entorno seguro"</li>
-    <li> "Cuidamos tu información: seguimos los más altos estándares de seguridad"</li>
+    <h1 class="reglas">Estándares</h1>
+    <li style="font-size: 20px;"> Este sitio solo es para publicitarte y obtener mas ventas en tu negocio </li>
+    <li style="font-size: 20px;">Contenido para todo publico ("en especial para las personas que desean productos que les llama la atención en nuestra app")</li>
+    <li  style="font-size: 20px;">"Tu seguridad es nuestra prioridad: navegamos contigo en un entorno seguro"</li>
+    <li style="font-size: 20px;"> "Cuidamos tu información: seguimos los más altos estándares de seguridad"</li>
      </ol>
  </body>
 </html>
